reset password functionality

--- a/template/login.html
+++ b/template/login.html
@@ -36,9 +36,8 @@
         </center>
         <br />
         <center>
-          <a href="forgotpassword" class="btn waves-effect waves-light">
+          <a href="{% url 'reset_password'%}" class="btn waves-effect waves-light">
             Forgot Password ?
-            <!-- <i class="material-icons right">send</i> -->
           </a>
         </center>
       </div>
