filter by price and rating

--- a/template/base.html
+++ b/template/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TravelLite</title>
+    <title>Smart Travel</title>
 
     <!-- CSS  -->
     <link
@@ -135,7 +135,7 @@
       <div class="nav-wrapper container">
         <button class="openbtn" onclick="openNav()">☰</button>
         <a id="logo-container" href="/" class="brand-logo teal-text"
-          >TravelLite</a
+          >Smart Travel</a
         >
         <ul class="right hide-on-med-and-down">
           <!-- <li><a href="/">Flights</a></li>
@@ -172,7 +172,7 @@
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
-          <li><a href="/">TravelLite</a></li>
+          <li><a href="/">Smart Travel</a></li>
           <li class="divider" tabindex="-1"></li>
           <li><a href="/">Flights</a></li>
           <li><a href="/hotels">Hotels</a></li>
