--- a/template/photographer.html
+++ b/template/photographer.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photographers</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <style>
+    .container {
+  margin: 1rem;
+  }
     body {
       height: 100%;
       width: 100vw;
@@ -25,7 +29,6 @@
       color: #fff;
       font-family: "Open Sans", sans-serif;
     }
-
     /*--------------------
       NAVBAR
       --------------------*/
@@ -118,7 +121,7 @@
       flex-direction: column;
       align-items: center;
       min-width: 260px;
-      height: 250px;
+      height: 60px;
       margin-top: 10px;
       background: -webkit-linear-gradient(top, #3a404d, #181c26);
       background: linear-gradient(to bottom, #3a404d, #181c26);
@@ -326,28 +329,31 @@
       $(".shop-card").hide(300);
       $('*[data-cat="Lenovo"]').show(300);
     });
+   
   </script>
   <body>
     <!-- NAVBAR -->
     <div class="navbar">
       <div class="logo">Smart Travel</div>
+      <i style="font-size:24px" class="fa">&#xf0b0;</i>
+
+    <select name="filter" onchange="sort()" id="filter" style="margin: 10px;">
+      <option value="0">default </option>
+      <option value="1"><a>Price : Low to High</option>
+      <option value="2">Price : High to Low </option>
+      <option value="3">Rating</option>
+    </select>
       <div class="account-container">
-        <i class="fa fa-user" aria-hidden="true"></i>
-        <div class="cart-desc">
-          <!-- <input type="button" value="My account" /> -->
-          <button onclick="document.location='dashboard'">Dashboard</button>
+          <!-- <button onclick="document.location='dashboard'" style="margin: 15px;">Dashboard</button>tton >dashboard</button> -->
+          <form action="/dashboard" method="GET" class="nav"><input value="Dashboard" type="submit">
+          </form>
         </div>
       </div>
-      <!-- <div class="cart-container">
-        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        <div class="cart-desc">0 items</div>
-      </div> -->
     </div>
-
     <!-- INFO BAR -->
     <div class="info-wrapper">
       <div class="shipping-container">
-        <i class="fa fa-truck fa-2x"></i>
+        <i class=" "></i>
         <div class="info-desc">Photographers :</div>
       </div>
       <!-- <div class="inventory-container">
@@ -359,9 +365,9 @@
     <!-- MAIN WRAPPER -->
     <div class="main-wrapper">
       <div class="menu">
-        <div class="menu-item Amazon">
+        <div class="menu-item Amazon" style="height:60px;">
           <div class="menu-item-title">Photographers</div>
-          <div class="menu-item-number">{{x.count}}</div>
+          <div class="menu-item-number">{{x | length}}</div>
         </div>
       </div>
 
@@ -375,9 +381,10 @@
             <img src="{{xi.image.url}}" style="height: 125px; width: 245px" />
           </div>
           <div class="cta">
-            <div class="price">&#x20B9;{{xi.charges}}/day</div>
+            <span class="price" >&#9733;{{xi.review}}/5.0</span><br>
+            <div class="price" style="position:relative;  right:95px; top:23px;">&#x20B9;{{xi.charges}}/day</div>
             <!-- <button class="button" onclick="document.location='viewprofile'"> -->
-            <a href="viewprofile/{{xi.id}}" class="button">View</a>
+            <a href="/viewprofile/{{xi.id}}" class="button" style="position:relative;right:30px;">View</a>
             <!-- </button> -->
           </div>
         </div>
@@ -391,5 +398,18 @@
       <div>asdasdas asd as</div>
       <div>asdasdas asd as</div>
     </div>
+    <script>
+      document.getElementById("filter").selectedIndex = "{{select}}";
+
+      function sort(){
+        var value = document.getElementById('filter').value;
+        if(value != 0){
+          window.location = '/photographer/'  + value;
+        }
+        else{
+          window.location = '/photographer'
+        }        
+      }
+    </script>
   </body>
 </html>
