--- a/template/addphoto.html
+++ b/template/addphoto.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Photos</title>
     <style>
+      body{
+        background-image: url('https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-beautiful-technology-website-business-poster-background-template-image_148436.jpg');
+        background-repeat: no-repeat;
+        background-size: 1700px 1500px;
+      }
       </style>
   </head>
   <body>
