--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -298,6 +298,16 @@ a {
     margin: 0;
   }
 }
+.shreyans{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 </style>
 <script>
     /* JS needed only for demo */
@@ -357,7 +367,7 @@ $(document).ready(function(){
       </button> -->
       <div class="links-con">
         <a target="_blank" class="nav new">Welcome {{user.username}}</a>
-        <form action="/myorders" method="GET" class="nav"><input value="My Orders" type="submit">
+        <form action="/myorders" method="GET" class="nav" ><input value="My Orders" type="submit">
         </input></form>
         <form action="/login" method="GET" class="nav"><input value="Home" type="submit">
         </input></form>
